--- a/force-app/main/default/classes/VariablesDataTypesOperators.cls
+++ b/force-app/main/default/classes/VariablesDataTypesOperators.cls
@@ -18,7 +18,7 @@
  * If statements are not specifically covered in the lesson this module, but review module 2 flow control section for an overview if needed.
  * Resources: https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_if_else.htm 
  * 
- * @author Your Name
+ * @author Miki Todosov
  */
 
 public with sharing class VariablesDataTypesOperators {
@@ -32,9 +32,20 @@ public with sharing class VariablesDataTypesOperators {
      * @return The sum of the two numbers, or null if either number is null.
      */
     public static Integer addition(Integer a, Integer b) {  
-        return null; // Replace null with the variable you used to store the result
+        if (a == null || b == null){
+            return null;
+        } else {
+          return a + b;  
+        }    
     }
-
+    /*
+    Comment regarding question 1:
+    I was getting a test error about handling null values for the integers.
+    A little confused as why null values matter in a code like this for addition.
+    Did not get the same error for Question 2, similar question.
+    Was it just the way the test was set up?
+    */
+    
     /**
      * Question 2
      * Performs subtraction of two numbers.
@@ -44,7 +55,8 @@ public with sharing class VariablesDataTypesOperators {
      * @return The difference between the two numbers.
      */
     public static Integer subtraction(Integer a, Integer b) {
-        return null; // Replace null with the variable you used to store the result
+        Integer result = a - b;
+        return result; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -56,7 +68,8 @@ public with sharing class VariablesDataTypesOperators {
      * @return The product of the two numbers.
      */
     public static Integer multiplication(Integer a, Integer b) {
-        return null; // Replace null with the variable you used to store the result
+        Integer result = a * b;
+        return result; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -69,8 +82,13 @@ public with sharing class VariablesDataTypesOperators {
      * @return The quotient of the division, or 0 if the denominator is zero.
      */
     public static Double division(Double a, Double b) {
-        return null; // Replace null with the variable you used to store the result
-    }
+        if (b == 0){
+            return 0;
+        }
+        Double result = a / b;
+        return result; // Replace null with the variable you used to store the result
+        }
+    
 
     /**
      * Question 5
@@ -83,7 +101,12 @@ public with sharing class VariablesDataTypesOperators {
      * @return True if the number is even, False otherwise.
      */
     public static Boolean isEven(Integer num) {
-        return null; // Replace null with the variable you used to store the result
+        Boolean numberIsEven = true;
+        if (math.mod(num, 2) == 0) { // Found on Google that we can also use num % 2 == 0. 
+        return numberIsEven;
+        } else {
+            return false;
+        }
     }
 
     /**
@@ -94,7 +117,12 @@ public with sharing class VariablesDataTypesOperators {
      * @return true if the number is positive, false otherwise.
      */
     public static Boolean isPositive(Integer num) {
-        return null; // Replace null with the variable you used to store the result
+        Boolean numberIsPositive = true;
+        if (num > 0) {
+            return numberIsPositive;
+        } else {
+            return false; // Replace null with the variable you used to store the result
+        }
     }
 
     /**
@@ -106,7 +134,8 @@ public with sharing class VariablesDataTypesOperators {
      * @return The concatenated string.
      */
     public static String concatenateStrings(String str1, String str2) {
-        return null; // Replace null with the variable you used to store the result
+        String concatStrings = str1 + str2;
+        return concatStrings; // Replace null with the variable you used to store the result
     }
 
 	/**
@@ -121,7 +150,8 @@ public with sharing class VariablesDataTypesOperators {
 	 * @return The complete sentence as a single String.
 	 */
 	public static String createSentence(String noun, String verb, String endingPunctuation) {
-		return null; // Replace null with the variable you used to store the result
+        String concatSentence = 'The ' + noun + ' is ' + verb + endingPunctuation;
+		return concatSentence; // Replace null with the variable you used to store the result
 	}
 
     /**
@@ -134,7 +164,13 @@ public with sharing class VariablesDataTypesOperators {
      * @return True if the date is in the past, False otherwise.
      */
     public static Boolean isDateInPast(Date dt) {
-        return null; // Replace null with the variable you used to store the result
+        Boolean dateIsInThePast = true;
+        Date today = Date.today();
+        if (dt < today) {
+            return dateIsInThePast;
+        } else {
+            return false;
+        }
     }
 
     /**
@@ -147,7 +183,13 @@ public with sharing class VariablesDataTypesOperators {
      * @return True if the date is today or in the future, False otherwise.
      */
     public static Boolean isDateTodayOrFuture(Date dt) {
-        return null; // Replace null with the variable you used to store the result
+        Boolean dateTodayOrFuture = true;
+        Date today = date.today();
+        if (dt == today || dt > today) {
+            return dateTodayOrFuture;
+        } else {
+            return false;
+        }
     }
 
     /**
@@ -159,16 +201,16 @@ public with sharing class VariablesDataTypesOperators {
      * @param minutes The number of minutes.
      * @return The number of milliseconds equivalent to the given number of minutes.
      */
-    Integer MILLISECONDS_PER_MINUTE = null; // Make this value a constant
+    final Integer MILLISECONDS_PER_MINUTE = 60000; // Make this value a constant
     public static Integer convertMinutesToMilliseconds(Integer minutes) {
-        Integer milliseconds;
-        return null; // Replace null with the variable you used to store the result
+        Integer milliseconds = minutes * 60000;
+        return milliseconds; // Replace null with the variable you used to store the result
     }    
 
     /**
      * Question 12
      * Calculates the average of three numbers.
-     * Formula: Average = (Sum of Numbers) ÷ (Total Numbers)
+     * Formula: Average = (Sum of Numbers) / (Total Numbers)
      * Example: averageOfThreeNumbers(1, 2, 3) should return 2
      * @param a The first number.
      * @param b The second number.
@@ -176,7 +218,11 @@ public with sharing class VariablesDataTypesOperators {
      * @return The average of the three numbers.
      */
     public static Double averageOfThreeNumbers(Integer a, Integer b, Integer c) {
-        return null; // Replace null with the variable you used to store the result
+        Double totalNumbers = 3;
+        Integer sumOfNumbers = a + b + c;
+        Double dubSumOfNumbers = (double)sumOfNumbers;
+        Double average = dubSumOfNumbers / totalNumbers;
+        return average; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -191,10 +237,10 @@ public with sharing class VariablesDataTypesOperators {
      */
     public static Integer adjustOrderOfOperations1(Integer a, Integer b, Integer c) {
         // Add parentheses around the addition operation so that it is performed before multiplication
-        Integer result = a + b * c;
+        Integer result = (a + b) * c;
 
         // Return the result
-        return null; // Replace null with the variable you used to store the result
+        return result; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -206,8 +252,8 @@ public with sharing class VariablesDataTypesOperators {
         // Add parentheses in the below expression to change the result.
         // The result of the expression as it is right now is 43. 
         // You should add parentheses so that the result of the expression becomes 8.
-        Integer answer = 48 - 15 + 5 * 2;
-        return null; // Replace null with the variable you used to store the result
+        Integer answer = 48 - ((15 + 5) * 2);
+        return answer; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -226,10 +272,14 @@ public with sharing class VariablesDataTypesOperators {
      */
     public static Double complexOrderOfOperations(Integer a, Integer b, Integer c, Integer d, Integer e) {
         // Add parentheses around the multiplication and subtraction operations so that they are performed before division and addition
-        Double result = a * b - c / (Double) d + e;
+        Double result = ((a * b) - c) / (Double) d + e;
 
-        return null; // Replace null with the variable you used to store the result
+        return result; // Replace null with the variable you used to store the result
     }
+    /* Comment on Question 15:
+       I don't understand the use of (Double) in the denominator. It was given, but I don't understand why it was only used where it was. 
+       Shouldn't all integers be converted to Double?
+    */
 
     /**
      * Question 16
@@ -242,8 +292,9 @@ public with sharing class VariablesDataTypesOperators {
         final Double SUBTRACT_FACTOR = 32.0;
         final Double MULTIPLY_FACTOR = 5.0;
         final Double DIVIDE_FACTOR = 9.0;
-    
-        return null; // Replace null with the variable you used to store the result
+        Double fraction = MULTIPLY_FACTOR / DIVIDE_FACTOR;
+        Double celsius = (fahrenheit - SUBTRACT_FACTOR) * fraction;
+        return celsius; // Replace null with the variable you used to store the result
     }
 
     
@@ -259,11 +310,11 @@ public with sharing class VariablesDataTypesOperators {
      */
     public static Integer performDivisionAndCast(Double a, Double b) {
         // Perform the division and cast (round down) off the result.
-        Double divisionResult = null;
+        Double divisionResult = a / b;
 
         // Write the code for type casting the divisionResult to an Integer
-        Integer roundedResult = null;
-        return null; // Replace null with the variable you used to store the result
+        Integer roundedResult = (Integer) divisionResult;
+        return roundedResult; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -277,7 +328,8 @@ public with sharing class VariablesDataTypesOperators {
      */
     public static Decimal calculateWeeklyPaycheck(Decimal hourlyRate, Double numberOfHours) {
         // Calculate the weekly paycheck using the formula: rate multiplied by hours
-        return null; // Replace null with the variable you used to store the result
+        Decimal weeklyPaycheck = hourlyRate * (Decimal)numberOfHours;
+        return weeklyPaycheck; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -291,7 +343,9 @@ public with sharing class VariablesDataTypesOperators {
      * @return A Decimal representing the monthly paycheck.
      */
     public static Decimal calculateMonthlyPaycheck(Decimal hourlyRate, Double numberOfHours) {
-        return null; // Replace null with the variable you used to store the result
+        Decimal weeklyPaycheck = hourlyRate * (Decimal)numberOfHours;
+        Decimal monthlyPaycheck = weeklyPaycheck * 4;
+        return monthlyPaycheck; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -305,6 +359,7 @@ public with sharing class VariablesDataTypesOperators {
      * @return The total cost after applying the sales tax.
      */
     public static Decimal calculateTotalCost(Decimal pricePerUnit, Integer numberOfUnits, Decimal salesTaxRate) {
-        return null; // Replace null with the variable you used to store the result
+        Decimal totalCost = (pricePerUnit * (Decimal)numberOfUnits) * (1 + salesTaxRate);
+        return totalCost; // Replace null with the variable you used to store the result
     }
 }
